--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "description": "a model class that's useful in crud components",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/smalllong/crud-model-class.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
