--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
   "presets": [
     "minify",
-    "env"
+    ["env", {"targets": {
+      "browsers": ["chrome >= 50", "firefox >= 26", "ie 11", "edge >= 12"]
+    }}]
   ]
 }
