--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crud-model-class",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "a model class that's useful in crud components",
   "main": "index.min.js",
   "repository": {
@@ -11,7 +11,7 @@
     "build": "babel index.js --out-file index.min.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "lixiaolong",
+  "author": "lixiaolong <m18818276304@icloud.com>",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
